--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
         .edit-icon.inactive {
             opacity: 0.5; /* Ofusca o ícone */
             pointer-events: none; /* Desativa cliques */
+            position: relative;
+        }
+
+        .edit-icon.inactive:hover::after {
+            content: "Você só pode alterar o próprio nome";
+            position: absolute;
+            top: 100%; /* Exibe abaixo do ícone */
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #000;
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 0.8rem;
+            white-space: nowrap;
+            z-index: 10;
         }
 
         @media (min-width: 768px) {
@@ -142,7 +158,7 @@
                     </div>
                     <div class="record-display mt-3">
                         <h4>🏆 Recordista</h4>
-                        <div id="record-holder" class="text-primary">Nenhum recordista ainda</div>
+                        <div id="record-holder" class="text-primary"><b>Nenhum recordista ainda</b></div>
                         <div id="record-score" class="text-secondary">Recorde: 0</div>
                     </div>
                 </div>
@@ -386,7 +402,7 @@
                     score: currentScore
                 };
 
-                document.getElementById('record-holder').textContent = recordHolder.name;
+                document.getElementById('record-holder').innerHTML = `<b>${recordHolder.name}</b>`;
                 document.getElementById('record-score').textContent = `Recorde: ${recordHolder.score}`;
             }
         }
