--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
             font-size: 1rem;
             margin-left: 5px;
             color: #007bff;
+            transition: color 0.3s ease; /* Suaviza a transição */
         }
 
         .edit-icon:hover {
-            color: #0056b3;
+            color: #0056b3; /* Cor ao passar o mouse */
         }
 
         .edit-icon.inactive {
@@ -107,6 +108,10 @@
             .cell {
                 font-size: calc(1.5rem + 1.5vw); /* Ajusta o tamanho proporcional */
             }
+        }
+
+        #player-choice .btn {
+            transition: background-color 0.3s ease, color 0.3s ease; /* Suaviza a transição */
         }
 
         #player-choice .btn:hover {
